<resources>
    <!--
     Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
     It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
     or something similar.
-->
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_movie_details">MovieDetails</string>


    <!-- SyncAdapter related -->
    <string name="sync_account_type">example.com</string>
    <string name="content_authority">tk.talcharnes.popularmovies.db</string>
    <string name="pref_last_notification">last_notification
    </string>
    <string name="please_connect_to_internet_and_restart_app">Please connect to internet and restart app</string>
    <string name="overview">Overview</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="refresh">Refresh</string>
    <string name="review">Review:</string>
    <string name="author">Author:</string>
    <string name="release_date_unavailable">Release date not available</string>
    <string name="please_choose_movie_string">Please choose a movie</string>
    <string name="overview_unavailable_string">Not Available</string>
    <string name="N_A_String">N/A</string>
    <string name="title">Title!</string>
    <string name="poster">Poster</string>
    <string name="release_date">Release Date</string>
    <string name="no_favorites_in_list">No favorites in list</string>
</resources>
